# AG1

./: .gitignore  module.py  pyproject.toml  source.py
backend/: requirements.txt  server.py
backend/history/: 390b95c4-fc31-4ecc-ac2b-b5e6d9ee53ae.json  4b9e6065-e92e-4427-b47b-b4754ac84efa.json  69ef02f4-9922-4637-8a9c-f4ccc7c78695.json
backend/resources/: MyStudentData.txt  chat_logs.jsonl
chatbot/: __init__.py  bot.py  config.py  history.py  llm.py  memory.py  prompt.py  rag.py
chatbot/agents/: __init__.py  auditor.py  scraper.py  search.py  summarizer.py
chatbot/pipelines/: __init__.py  research.py
chatbot/utils/: __init__.py  code_executor.py  log_viewer.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
frontend/static/css/: style.css
prompts/: system_prompt.md
